--- a/contato.html
+++ b/contato.html
@@ -119,7 +119,7 @@
 
 <form action="https://formsubmit.co/lourdesfruitt@gmail.com" method="POST">
   <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="https://seusite.com/obrigado.html">
+  <input type="hidden" name="_next" value="https://lourdesfruitt.com/obrigado.html">
 
   <label for="nome">Nome:</label>
   <input type="text" id="nome" name="nome" required>
