--- a/contato.html
+++ b/contato.html
@@ -117,7 +117,7 @@
   <button class="theme-toggle" title="Alternar tema">🌓</button>
   <h1>Fale Conosco</h1>
 
-<form action="https://formsubmit.co/lourdesfruitt@gmail.com" method="POST">
+<form action="https://formsubmit.co/lourdesfruitt@gmail.com.br" method="POST">
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_next" value="https://lourdesfruitt.com/obrigado.html">
 
@@ -127,6 +127,9 @@
   <label for="email">Email:</label>
   <input type="email" id="email" name="email" required>
 
+  <label for="assunto">Assunto</label>
+  <input type="text" id="assunto" name="assunto" required />
+  
   <label for="mensagem">Mensagem:</label>
   <textarea id="mensagem" name="mensagem" required></textarea>
 
