--- a/contato.html
+++ b/contato.html
@@ -117,7 +117,7 @@
   <button class="theme-toggle" title="Alternar tema">🌓</button>
   <h1>Fale Conosco</h1>
 
-<form action="https://formsubmit.co/lourdesfruitt@gmail.com.br" method="POST">
+<form action="https://formsubmit.co/lourdesfruitt@gmail.com" method="POST">
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_next" value="https://lourdesfruitt.com/obrigado.html">
 
