--- a/contato.html
+++ b/contato.html
@@ -119,7 +119,8 @@
 
 <form action="https://formsubmit.co/lourdesfruitt@gmail.com" method="POST">
   <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="https://vbtech959.github.io/Lourdes-Fruitt/index.html">
+  <input type="hidden" name="_next" value="https://vbtech959.github.io/Lourdes-Fruitt/obrigado.html">
+
 
   <label for="nome">Nome:</label>
   <input type="text" id="nome" name="nome" required>
@@ -135,7 +136,6 @@
 
   <button type="submit">Enviar</button>
 </form>
-
 
   <a class="back-link" href="index.html">← Voltar ao catálogo</a>
 
